adds concurrency for workflows in PR so that already running wfs are cancelled if new ones are triggered

--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -16,6 +16,10 @@ on:
       - '.github/workflows/app-frontend-cypress.yml'
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event.pull_request.number || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   install:
     name: Install cypress, build frontend
