--- a/src/Designer/backend/tests/Designer.Tests/_TestData/Repositories/testUser/ttd/ttd-gitops/apps/test-app-2/kustomize.yaml
+++ b/src/Designer/backend/tests/Designer.Tests/_TestData/Repositories/testUser/ttd/ttd-gitops/apps/test-app-2/kustomize.yaml
@@ -7,7 +7,7 @@ spec:
   force: false
   interval: 5m0s
   path: ./
-  prune: false
+  prune: true
   retryInterval: 5m0s
   sourceRef:
     kind: OCIRepository
