Remove token from studio gateway settings

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -46,10 +46,10 @@
     },
     "StudioGatewaySettings": {
         "Test": {
-            "BaseUri": "https://{org}.apps.tt02.altinn.no/monitor"
+            "BaseUrl": "https://{org}.apps.tt02.altinn.no/runtime/gateway/api/v1"
         },
         "Prod": {
-            "BaseUri": "https://{org}.apps.altinn.no/monitor"
+            "BaseUrl": "https://{org}.apps.altinn.no/runtime/gateway/api/v1"
         }
     },
     "MaskinportenClientSettings": {
