gateway designer environments and cleanup

--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -13,10 +13,16 @@
         ],
         "RequiredScope": "altinn:studio/gateway",
         "ClientMetadataAddress": "https://test.maskinporten.no/.well-known/oauth-authorization-server"
-  },
-  "StudioEnvironments": {
-    "staging": {
-      "Url": "https://staging.altinn.studio/"
+    },
+    "StudioEnvironments": {
+        "staging": {
+            "Url": "https://staging.altinn.studio/"
+        },
+        "dev": {
+            "Url": "https://dev.altinn.studio/"
+        },
+        "prod": {
+            "Url": "https://altinn.studio/"
+        }
     }
-  }
 }
