--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -23,57 +23,26 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Setup Node.js
-        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
+      - name: Build Local Environment
+        uses: ./.github/actions/app-build-local-env
         with:
-          node-version: '20.x'
+          node-version: '22'
 
-      - name: Installing Frontend Dependencies
-        uses: ./.github/actions/yarn-install
+      - name: Run Local Environment
+        uses: ./.github/actions/app-run-local-env
         with:
-          working-directory: src/App/frontend
+          run-frontend: false
+          run-localtest: true
 
-      - name: Build localtest
-        working-directory: src/Runtime/localtest
-        run: docker compose build
+      - name: Build component-library
+        working-directory: src/test/apps/component-library/App
+        run: dotnet build --restore
 
-      - name: Build component-library and frontend
-        working-directory: '.'
-        run: |
-          # Build frontend in background
-          cd src/App/frontend
-          yarn run build & YARN_BUILD_PID=$!
-
-          # Return to workspace root
-          cd $GITHUB_WORKSPACE
-
-          # Build component-library app in foreground
-          cd src/test/apps/component-library/App
-          dotnet build --restore
-
-          wait $YARN_BUILD_PID || exit 1
-
-      - name: Start localtest and component-library
+      - name: Start component-library
         run: |
           # Start the app in background
           cd src/test/apps/component-library/App
           nohup dotnet run --no-build > $GITHUB_WORKSPACE/app.log 2>&1 & APP_PID=$!
-
-          # Return to workspace root
-          cd $GITHUB_WORKSPACE
-
-          # Start localtest
-          echo "Starting localtest..."
-          cd src/Runtime/localtest && docker compose up -d
-
-          # Wait for localtest readiness
-          echo "Waiting for localtest at http://local.altinn.cloud/"
-          if timeout 120 bash -c 'until curl -f http://local.altinn.cloud/ > /dev/null 2>&1; do sleep 2; done'; then
-            echo "✅ localtest is ready!"
-          else
-            echo "❌ localtest failed to start within 2 minutes."
-            exit 1
-          fi
 
           # Wait for app readiness
           echo "Waiting for app to start listening on port 5005..."
@@ -86,10 +55,6 @@ jobs:
             kill $APP_PID 2>/dev/null || true
             exit 1
           fi
-
-        env:
-          TEST_DOMAIN: local.altinn.cloud
-          ALTINN3LOCAL_PORT: 80
       - name: Run Lighthouse CI
         id: lighthouse-ci
         working-directory: src/App/frontend
