fixes upload path

--- a/.github/actions/app-build-localtest/action.yaml
+++ b/.github/actions/app-build-localtest/action.yaml
@@ -58,5 +58,5 @@ runs:
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
       with:
         name: localtest-docker-images
-        path: /tmp/localtest-images.tar
+        path: /tmp/localtest-docker-cache/images.tar
         retention-days: 1
