Upgrading to .NET 10 + packages, starting to fix build warnings

--- a/src/cli/Directory.Packages.props
+++ b/src/cli/Directory.Packages.props
@@ -15,5 +15,8 @@
     <PackageVersion Include="CSharpier.MsBuild" Version="1.1.2" />
     <PackageVersion Include="Nullable.Extended.Analyzer" Version="1.15.6581" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
+    <PackageVersion Include="Microsoft.Build.Framework" Version="18.0.2" />
+    <PackageVersion Include="Microsoft.Build.Tasks.Core" Version="18.0.2" />
+    <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="18.0.2" />
   </ItemGroup>
 </Project>
