--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -29,8 +29,6 @@ jobs:
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
       - name: Build localtest
         uses: ./.github/actions/app-build-localtest
-        with:
-          profile: 'test-apps'
 
   lighthouse:
     name: Lighthouse CI
@@ -57,7 +55,7 @@ jobs:
           path: /tmp
 
       - name: Load docker images
-        run: docker load -i /tmp/localtest-images.tar
+        run: docker load -i /tmp/images.tar
 
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
