--- a/src/App/frontend/tsconfig.json
+++ b/src/App/frontend/tsconfig.json
@@ -23,6 +23,7 @@
     "isolatedModules": true,
     "paths": {
       "src/*": ["src/*"],
+      "nextsrc/*": ["nextsrc/*"],
       "test/*": ["test/*"],
       "schemas/*": ["schemas/*"],
       "scripts/*": ["scripts/*"]
@@ -45,6 +46,6 @@
       }
     ]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "scripts/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "nextsrc/**/*.ts", "nextsrc/**/*.tsx", "scripts/**/*.ts"],
   "exclude": ["node_modules/cypress"]
 }
