--- a/.github/actions/app-build-frontend/action.yaml
+++ b/.github/actions/app-build-frontend/action.yaml
@@ -43,3 +43,12 @@ runs:
         name: app-frontend-dist
         path: src/App/frontend/dist
         if-no-files-found: error
+
+    - name: Save yarn dependencies
+      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+      with:
+        name: app-frontend-deps
+        path: |
+          src/App/frontend/node_modules
+          src/App/frontend/yarn.lock
+        retention-days: 1
