use yarn cache instead of uploaded artifacts

--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -48,11 +48,6 @@ jobs:
           name: app-frontend-dist
           path: src/App/frontend/dist
 
-      - name: Download yarn dependencies
-        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
-        with:
-          name: app-frontend-deps
-          path: src/App/frontend
 
       - name: Download built localtest docker images
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
@@ -94,6 +89,12 @@ jobs:
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
         with:
           node-version: '22'
+          cache: 'yarn'
+          cache-dependency-path: src/App/frontend/yarn.lock
+
+      - name: Install dependencies
+        working-directory: src/App/frontend
+        run: yarn install --frozen-lockfile
 
       - name: Run Lighthouse CI
         id: lighthouse-ci
