--- a/.github/actions/app-build-localtest/action.yaml
+++ b/.github/actions/app-build-localtest/action.yaml
@@ -15,7 +15,7 @@ runs:
       uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
       with:
         path: /tmp/localtest-docker-cache
-        key: localtest-docker-${{ runner.os }}-${{ hashFiles('src/Runtime/localtest/**', 'src/App/backend/**') }}
+        key: localtest-docker-${{ runner.os }}-${{ hashFiles('src/Runtime/localtest/**', 'src/App/backend/**') }}${{ inputs.docker-profile == 'test-apps' && format('-{0}', hashFiles('src/test/apps/**')) || '' }}
         restore-keys: |
           localtest-docker-${{ runner.os }}-
 
