--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
       - name: Build localtest
         uses: ./.github/actions/app-build-localtest
+        with:
+          docker-profile: 'test-apps'
 
   lighthouse:
     name: Lighthouse CI
@@ -48,7 +50,6 @@ jobs:
           name: app-frontend-dist
           path: src/App/frontend/dist
 
-
       - name: Download built localtest docker images
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
         with:
@@ -64,27 +65,6 @@ jobs:
           run-frontend: false
           run-localtest: true
 
-      - name: Build component-library
-        working-directory: src/test/apps/component-library/App
-        run: dotnet build --restore
-
-      - name: Start component-library
-        run: |
-          # Start the app in background
-          cd src/test/apps/component-library/App
-          nohup dotnet run --no-build > $GITHUB_WORKSPACE/app.log 2>&1 & APP_PID=$!
-
-          # Wait for app readiness
-          echo "Waiting for app to start listening on port 5005..."
-          if timeout 120 bash -c 'until grep -q "Now listening on: http://\[::]:" $GITHUB_WORKSPACE/app.log 2>/dev/null; do sleep 1; done'; then
-            echo "✅ App is ready!"
-          else
-            echo "❌ App failed to start within 2 minutes."
-            echo "=== App log ==="
-            cat $GITHUB_WORKSPACE/app.log
-            kill $APP_PID 2>/dev/null || true
-            exit 1
-          fi
       - name: Setup Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
         with:
