fix: SSA annotation

--- a/src/Runtime/StudioGateway/infra/kustomize/base/secrets.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/secrets.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: external-grafana-altinn-studio-gateway-token
+  annotations:
+    kustomize.toolkit.fluxcd.io/ssa: IfNotPresent
 type: Opaque
 stringData:
   secrets.json: '{}'
@@ -10,6 +12,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: maskinporten-client-for-designer
+  annotations:
+    kustomize.toolkit.fluxcd.io/ssa: IfNotPresent
 type: Opaque
 stringData:
   secrets.json: '{}'
