--- a/src/cli/src/altinn-studio-cli/altinn-studio-cli.csproj
+++ b/src/cli/src/altinn-studio-cli/altinn-studio-cli.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Locator" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" ExcludeAssets="runtime" />
     <PackageReference Include="System.CommandLine" />
   </ItemGroup>
 
