--- a/.github/actions/app-build-localtest/action.yaml
+++ b/.github/actions/app-build-localtest/action.yaml
@@ -10,27 +10,19 @@ runs:
     - name: Checkout
       uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
-    - name: Cache localtest Docker images
-      id: cache-docker
-      uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
       with:
-        path: /tmp/localtest-docker-cache
-        key: localtest-docker-${{ runner.os }}-${{ hashFiles('src/Runtime/localtest/**', 'src/Runtime/pdf3/**', 'src/test/apps/**', 'src/App/backend/**') }}
-        restore-keys: |
-          localtest-docker-${{ runner.os }}-
-
-    - name: Load cached Docker images
-      if: steps.cache-docker.outputs.cache-hit == 'true'
-      run: |
-        if [ -f /tmp/localtest-docker-cache/images.tar ]; then
-          docker load -i /tmp/localtest-docker-cache/images.tar
-          echo "Loaded cached Docker images"
-        fi
-      shell: bash
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ github.token }}
 
     - name: Build localtest
-      if: steps.cache-docker.outputs.cache-hit != 'true'
       working-directory: src/Runtime/localtest
+      env:
+        DOCKER_BUILDKIT: 1
+        COMPOSE_DOCKER_CLI_BUILD: 1
+        BUILDKIT_PROGRESS: plain
       run: |
         args=""
         if [[ "${{ inputs.docker-profile }}" != "" ]]; then
@@ -42,29 +34,3 @@ runs:
           exit 1
         fi
       shell: bash
-
-    - name: Save docker images
-      working-directory: src/Runtime/localtest
-      run: |
-        mkdir -p /tmp/localtest-docker-cache
-
-        # Get profile argument
-        profile_arg=""
-        if [[ "${{ inputs.docker-profile }}" != "" ]]; then
-          profile_arg="--profile ${{ inputs.docker-profile }}"
-        fi
-
-        # Get image names from docker-compose config
-        images=$(docker compose $profile_arg config --format json | jq -r '.services | to_entries[] | select(.value.build != null) | .value.image // ("localtest-" + .key)' | tr '\n' ' ')
-
-        echo "Saving images: $images"
-        docker save $images -o /tmp/localtest-docker-cache/images.tar
-        echo "Built and cached Docker images"
-      shell: bash
-
-    - name: Upload docker images
-      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
-      with:
-        name: localtest-docker-images
-        path: /tmp/localtest-docker-cache/images.tar
-        retention-days: 1
