--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -51,14 +51,20 @@ jobs:
           name: app-frontend-dist
           path: src/App/frontend/dist
 
-      - name: Download built localtest docker images
-        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
-        with:
-          name: localtest-docker-images
-          path: /tmp
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
-      - name: Load docker images
-        run: docker load -i /tmp/images.tar
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+
+      - name: Pull docker images from registry
+        run: |
+          # Pull the images that were built and cached in the previous job
+          docker compose -f src/Runtime/localtest/docker-compose.yml --profile test-apps pull || true
 
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
