use gitopsmanager definition id for deploy

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -87,7 +87,8 @@
             "BaseUri": "https://dev.azure.com/brreg/altinn-studio/_apis/",
             "BuildDefinitionId": 69,
             "DeployDefinitionId": 81,
-            "DecommissionDefinitionId": 297
+            "DecommissionDefinitionId": 297,
+            "GitOpsManagerDefinitionId": 618
         }
     },
     "PostgreSQLSettings": {
