--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/StudioGateway.Api.csproj
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/StudioGateway.Api.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="KubernetesClient.Aot" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StudioGateway.Contracts\StudioGateway.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
