fix appsettings in order for test to run

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -158,5 +158,19 @@
     },
     "SchedulingSettings": {
         "UsePersistentScheduling": false
+    },
+    "MaskinportenClientForRuntime": {
+        "Test": {
+            "ClientId": "",
+            "Jwk": "",
+            "Scope": "altinn:studio/gateway",
+            "ExhangeToAltinnToken": false
+        },
+        "Prod": {
+            "ClientId": "",
+            "Jwk": "",
+            "Scope": "altinn:studio/gateway",
+            "ExhangeToAltinnToken": false
+        }
     }
 }
