add maskinporten environment

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -164,13 +164,15 @@
             "ClientId": "",
             "Jwk": "",
             "Scope": "altinn:studio/gateway",
-            "ExhangeToAltinnToken": false
+            "ExhangeToAltinnToken": false,
+            "Environment": "test"
         },
         "Prod": {
             "ClientId": "",
             "Jwk": "",
             "Scope": "altinn:studio/gateway",
-            "ExhangeToAltinnToken": false
+            "ExhangeToAltinnToken": false,
+            "Environment": "prod"
         }
     }
 }
