feat: syncroot push endpoint and decision should use gitops pipeline (#17221)

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -87,7 +87,8 @@
             "BaseUri": "https://dev.azure.com/brreg/altinn-studio/_apis/",
             "BuildDefinitionId": 69,
             "DeployDefinitionId": 81,
-            "DecommissionDefinitionId": 297
+            "DecommissionDefinitionId": 297,
+            "GitOpsManagerDefinitionId": 618
         }
     },
     "PostgreSQLSettings": {
@@ -157,5 +158,21 @@
     },
     "SchedulingSettings": {
         "UsePersistentScheduling": false
+    },
+    "MaskinportenClientForRuntime": {
+        "Test": {
+            "ClientId": "",
+            "Jwk": "",
+            "Scope": "altinn:studio/gateway",
+            "ExhangeToAltinnToken": false,
+            "Environment": "test"
+        },
+        "Prod": {
+            "ClientId": "",
+            "Jwk": "",
+            "Scope": "altinn:studio/gateway",
+            "ExhangeToAltinnToken": false,
+            "Environment": "prod"
+        }
     }
 }
